[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ureq = "2.6"
diesel = { version = "2.0.0", features = ["postgres"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.24", features = ["full"] }
once_cell = "1.17"
serde = "1.0"
serde_json = "1.0"
